// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`XAxis When XAxis is rendered above the chart it renders consistently with default tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="10%"
      y2="10%"
    />
    <g
      className="XAxisTicks"
    >
      <g>
        <line
          stroke="black"
          x1="-30%"
          x2="-30%"
          y1="10%"
          y2="7.5%"
        />
        <div
          axis={0}
          label="0"
          xPos={-30}
          yPos={7.5}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="10%"
          y2="7.5%"
        />
        <div
          axis={0}
          label="1"
          xPos={10}
          yPos={7.5}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="50%"
          x2="50%"
          y1="10%"
          y2="7.5%"
        />
        <div
          axis={0}
          label="2"
          xPos={50}
          yPos={7.5}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="10%"
          y2="7.5%"
        />
        <div
          axis={0}
          label="3"
          xPos={90}
          yPos={7.5}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis is rendered above the chart it renders consistently with explicit bucket tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="10%"
      y2="10%"
    />
    <g
      className="XAxisTicks"
    >
      <g>
        <line
          stroke="black"
          x1="6.666666666666665%"
          x2="6.666666666666665%"
          y1="10%"
          y2="7.5%"
        />
        <div
          axis={0}
          label="0"
          xPos={-6.666666666666668}
          yPos={7.5}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="36.666666666666664%"
          x2="36.666666666666664%"
          y1="10%"
          y2="7.5%"
        />
        <div
          axis={0}
          label="1"
          xPos={23.333333333333332}
          yPos={7.5}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="66.66666666666667%"
          x2="66.66666666666667%"
          y1="10%"
          y2="7.5%"
        />
        <div
          axis={0}
          label="2"
          xPos={53.33333333333334}
          yPos={7.5}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="96.66666666666669%"
          x2="96.66666666666669%"
          y1="10%"
          y2="7.5%"
        />
        <div
          axis={0}
          label="3"
          xPos={83.33333333333334}
          yPos={7.5}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis is rendered above the chart it renders consistently with explicit inline tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="10%"
      y2="10%"
    />
    <g
      className="XAxisTicks"
    >
      <g>
        <line
          stroke="black"
          x1="-30%"
          x2="-30%"
          y1="10%"
          y2="7.5%"
        />
        <div
          axis={0}
          label="0"
          xPos={-30}
          yPos={7.5}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="10%"
          y2="7.5%"
        />
        <div
          axis={0}
          label="1"
          xPos={10}
          yPos={7.5}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="50%"
          x2="50%"
          y1="10%"
          y2="7.5%"
        />
        <div
          axis={0}
          label="2"
          xPos={50}
          yPos={7.5}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="10%"
          y2="7.5%"
        />
        <div
          axis={0}
          label="3"
          xPos={90}
          yPos={7.5}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all negative it renders consistently with default tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxisTicks"
    >
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="-3"
          xPos={10}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="50%"
          x2="50%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="-2"
          xPos={50}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="-1"
          xPos={90}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all negative it renders consistently with explicit bucket tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxisTicks"
    >
      <g>
        <line
          stroke="black"
          x1="36.666666666666664%"
          x2="36.666666666666664%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="-3"
          xPos={23.33333333333334}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="66.66666666666667%"
          x2="66.66666666666667%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="-2"
          xPos={53.33333333333334}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="96.66666666666669%"
          x2="96.66666666666669%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="-1"
          xPos={83.33333333333334}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all negative it renders consistently with explicit inline tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxisTicks"
    >
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="-3"
          xPos={10}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="50%"
          x2="50%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="-2"
          xPos={50}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="-1"
          xPos={90}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all positive it renders consistently with default tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxisTicks"
    >
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="0"
          xPos={10}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="50%"
          x2="50%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="1"
          xPos={50}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="2"
          xPos={90}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all positive it renders consistently with explicit bucket tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxisTicks"
    >
      <g>
        <line
          stroke="black"
          x1="36.666666666666664%"
          x2="36.666666666666664%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="0"
          xPos={23.333333333333332}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="66.66666666666667%"
          x2="66.66666666666667%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="1"
          xPos={53.33333333333334}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="96.66666666666669%"
          x2="96.66666666666669%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="2"
          xPos={83.33333333333334}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values are all positive it renders consistently with explicit inline tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxisTicks"
    >
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="0"
          xPos={10}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="50%"
          x2="50%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="1"
          xPos={50}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="2"
          xPos={90}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values span negative and positive values it renders consistently with default tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxisTicks"
    >
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="-2"
          xPos={10}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="30%"
          x2="30%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="-1"
          xPos={30}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="50%"
          x2="50%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="0"
          xPos={50}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="70%"
          x2="70%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="1"
          xPos={70}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="2"
          xPos={90}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values span negative and positive values it renders consistently with explicit bucket tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxisTicks"
    >
      <g>
        <line
          stroke="black"
          x1="36.666666666666664%"
          x2="36.666666666666664%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="-2"
          xPos={23.333333333333332}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="51.66666666666667%"
          x2="51.66666666666667%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="-1"
          xPos={38.333333333333336}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="66.66666666666667%"
          x2="66.66666666666667%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="0"
          xPos={53.33333333333334}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="81.66666666666667%"
          x2="81.66666666666667%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="1"
          xPos={68.33333333333334}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="96.66666666666669%"
          x2="96.66666666666669%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="2"
          xPos={83.33333333333334}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;

exports[`XAxis When XAxis values span negative and positive values it renders consistently with explicit inline tick placement 1`] = `
<div
  className="XAxis"
>
  <svg
    className="XAxis__Svg"
  >
    <line
      fill="transparent"
      stroke="black"
      strokeWidth={1}
      x1="10%"
      x2="95%"
      y1="130%"
      y2="130%"
    />
    <g
      className="XAxisTicks"
    >
      <g>
        <line
          stroke="black"
          x1="10%"
          x2="10%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="-2"
          xPos={10}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="30%"
          x2="30%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="-1"
          xPos={30}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="50%"
          x2="50%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="0"
          xPos={50}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="70%"
          x2="70%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="1"
          xPos={70}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
      <g>
        <line
          stroke="black"
          x1="90%"
          x2="90%"
          y1="130%"
          y2="135%"
        />
        <div
          axis={0}
          label="2"
          xPos={90}
          yPos={135}
        >
          MockAxisTickLabel 
        </div>
      </g>
    </g>
  </svg>
</div>
`;
